--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <hr/>
 
     <h2>📈 Your Stake</h2>
-    <p id="yourStake">Loading...</p>
+    <p id="stakeAmount">Loading...</p>
     <button onclick="claimReward()">💰 เคลมรางวัล Your Stake</button>
     <p id="claimStatus" style="margin-top: 10px;"></p>
   </div>
