--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p id="walletAddress">❌ ยังไม่เชื่อมต่อกระเป๋า</p>
 
     <label>📨 ลิงก์แนะนำของคุณ:</label>
-    <input type="text" id="refLink" value="https://jin1963.github.io/RF" readonly>
+    <input type="text" id="refLink readonly>
     <button onclick="copyRefLink()">📋 คัดลอกลิงก์</button>
 
     <hr/>
